<resources>
    <string name="app_name">Weather</string>
    <string name="city">Новосибирск</string>
    <string name="currDate">ВС, 21.06</string>
    <string name="currInfo">Солнце и облачно</string>
    <string name="emtyImg">Weather Image</string>
    <string name="current_temp">20°C</string>
    <string name="weather_image">Weather Image</string>
    <string name="fewday">ВС</string>
    <string name="fewtemp">15°C</string>
    <string name="fewweather">Солнце и облачно</string>
    <string name="fewday2">ПН</string>
    <string name="fewtemp2">12°C</string>
    <string name="fewinfo2">Облачно с дождем</string>
    <string name="fewday3">ВТ</string>
    <string name="fewtemp3">19°C</string>
    <string name="fewinfo3">Очень солнечно</string>
    <string name="fewday4">СР</string>
    <string name="fewtemp4">16°C</string>
    <string name="fewinfo4">Солнечно и тучи</string>
    <string name="likeInfo">Интересный факт о сегодняшнем дне:\nВ Москве открыто регулярное таксомоторное движение.</string>
    <string name="btnSettings">Настройки</string>
    <string name="todo">TODO</string>
    <string name="name_button_back">Готово</string>
    <string name="TextChangeCity">Выберите город:</string>
    <string name="extra">Дополнительно</string>
    <string name="TextShowHumidity">Показывать влажность</string>
    <string name="TextShowPressure">Показывать давление</string>
    <string name="input_city_text">Введите город</string>
    <string name="fewcity">fewCity</string>
    <string name="description">description</string>

</resources>
